--- a/src/main/webapp/WEB-INF/templates/system/main.html
+++ b/src/main/webapp/WEB-INF/templates/system/main.html
@@ -46,10 +46,8 @@
                     <a th:href="@{${adminPath}+'/role/list'}" class="waves-effect waves-teal">角色</a>
                 </li>
             </ul>
-            <!--/* </editor-fold> */-->
-            <!--/* <editor-fold desc="right navbar item"> */-->
             <ul class="right">
-                <li th:text="${loginUser.username}+'，欢迎'"></li>
+                <li th:text="|${loginUser.username}, 欢迎|"></li>
                 <li>
                     <a class="dropdown-button" href="#" data-activates="dropdown-menu">
                         <i class="material-icons right">account_circle</i>
@@ -59,7 +57,6 @@
             <ul id="dropdown-menu" class="dropdown-content">
                 <li><a th:href="@{${adminPath}+'/logout'}" class="black-text">退出</a></li>
             </ul>
-            <!--/* </editor-fold> */-->
         </div>
     </nav>
 </header>
