--- a/src/main/webapp/WEB-INF/templates/role/roleList.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -16,7 +16,6 @@
 <header>
     <nav style="background-color: #37474f;z-index: 1;">
         <div class="nav-wrapper">
-            <!--/* <editor-fold desc="responsive navigation"> */-->
             <ul class="left">
                 <li style="height: 56px;">
                     <a href="#" data-activates="nav-mobile" id="button-nav-menu" class="hide-on-large-only">
@@ -26,31 +25,28 @@
             </ul>
             <ul id="nav-mobile" class="side-nav fixed" style="transform: translateX(0%);">
                 <li class="logo">
-                    <a id="logo-container" href="#" class="brand-logo">
+                    <a id="logo-container" th:href="@{${adminPath}+'/main'}" class="brand-logo">
                         <img src="../../../static/application/image/logo.png" alt="logo" class="center-block"/>
                     </a>
                 </li>
                 <li>
-                    <a href="../system/main.html" class="waves-effect waves-teal">首页</a>
+                    <a th:href="@{${adminPath}+'/main'}" class="waves-effect waves-teal">首页</a>
                 </li>
                 <li>
-                    <a href="../advertisementMachine/advertisementMachineList.html"
-                       class="waves-effect waves-teal">广告机</a>
+                    <a th:href="@{${adminPath}+'/advertisementMachine/list/1'}" class="waves-effect waves-teal">广告机</a>
                 </li>
                 <li>
-                    <a href="../advertisement/advertisementList.html" class="waves-effect waves-teal">广告</a>
+                    <a th:href="@{${adminPath}+'/advertisement/list'}" class="waves-effect waves-teal">广告</a>
                 </li>
-                <li>
-                    <a href="../user/userList.html" class="waves-effect waves-teal">用户</a>
+                <li th:if="${loginUser.roleID==1}">
+                    <a th:href="@{${adminPath}+'/user/list'}" class="waves-effect waves-teal">用户</a>
                 </li>
-                <li class="active">
-                    <a href="#" class="waves-effect waves-teal">角色 - 需要角色判断来显示</a>
+                <li class="active" th:if="${loginUser.roleID==1}">
+                    <a th:href="@{${adminPath}+'/role/list'}" class="waves-effect waves-teal">角色</a>
                 </li>
             </ul>
-            <!--/* </editor-fold> */-->
-            <!--/* <editor-fold desc="right navbar item"> */-->
             <ul class="right">
-                <li>username，欢迎</li>
+                <li th:text="|${loginUser.username}, 欢迎|"></li>
                 <li>
                     <a class="dropdown-button" href="#" data-activates="dropdown-menu">
                         <i class="material-icons right">account_circle</i>
@@ -58,9 +54,8 @@
                 </li>
             </ul>
             <ul id="dropdown-menu" class="dropdown-content">
-                <li><a href="#" class="black-text">退出</a></li>
+                <li><a th:href="@{${adminPath}+'/logout'}" class="black-text">退出</a></li>
             </ul>
-            <!--/* </editor-fold> */-->
         </div>
     </nav>
 </header>
@@ -74,7 +69,7 @@
 
         <!--/* <editor-fold desc="search box"> */-->
         <div id="search-box">
-            <form action="#" method="post">
+            <form th:action="@{${adminPath}+'/role/list'}" method="post">
                 <ul class="collapsible popout" data-collapsible="accordion">
                     <li>
                         <div class="collapsible-header"><i class="material-icons">search</i>条件搜索</div>
@@ -113,35 +108,42 @@
             </tr>
             </thead>
             <tbody class="card">
-            <tr>
-                <td>name</td>
-                <td>remark</td>
+            <!--/*@thymesVar id="list" type="java.util.List<com.xmlan.machine.module.role.entity.Role>"*/-->
+            <tr th:each="item : ${list}">
+                <td th:text="*{item.name}"></td>
+                <td th:text="*{#strings.abbreviate(item.remark,50)}"></td>
                 <td class="right-align hide-on-med-and-down">
                     <a class="btn-floating blue waves-effect waves-light tooltipped btn modal-trigger"
-                       data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal">
+                       data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal"
+                       th:onclick="'javascript:detail(\''+*{item.id}+'\')'">
                         <i class="material-icons">more_horiz</i>
                     </a>
                     <a class="btn-floating green waves-effect waves-light tooltipped"
-                       data-position="top" data-delay="50" data-tooltip="编辑" href="roleForm.html">
+                       data-position="top" data-delay="50" data-tooltip="编辑"
+                       th:href="@{${adminPath}+'/role/form?id='+${item.id}}">
                         <i class="material-icons">edit</i>
                     </a>
                     <a class="btn-floating red darken-1 waves-effect waves-light tooltipped"
-                       data-position="top" data-delay="50" data-tooltip="删除">
+                       data-position="top" data-delay="50" data-tooltip="删除"
+                       th:href="@{${adminPath}+'/role/delete?id='+${item.id}}">
                         <i class="material-icons">delete</i>
                     </a>
                 </td>
                 <td class="hide-on-large-only" id="mobile-table-item-buttons">
                     <a class="btn-floating blue waves-effect waves-light tooltipped btn modal-trigger"
-                       data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal">
+                       data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal"
+                       th:onclick="'javascript:detail(\''+*{item.id}+'\')'">
                         <i class="material-icons">more_horiz</i>
                     </a>
                     <br/>
                     <a class="btn-floating green waves-effect waves-light tooltipped"
-                       data-position="top" data-delay="50" data-tooltip="编辑" href="roleForm.html">
+                       data-position="top" data-delay="50" data-tooltip="编辑"
+                       th:href="@{${adminPath}+'/role/form?id='+${item.id}}">
                         <i class="material-icons">edit</i>
                     </a>
                     <a class="btn-floating red darken-1 waves-effect waves-light tooltipped"
-                       data-position="top" data-delay="50" data-tooltip="删除">
+                       data-position="top" data-delay="50" data-tooltip="删除"
+                       th:href="@{${adminPath}+'/role/delete?id='+${item.id}}">
                         <i class="material-icons">delete</i>
                     </a>
                 </td>
@@ -151,8 +153,9 @@
         <!--/* </editor-fold> */-->
 
         <!--/* <editor-fold desc="add button"> */-->
-        <div id="fixed-add-btn" class="fixed-action-btn">
-            <a class="btn-floating btn-large waves-effect waves-light blue" href="roleForm.html">
+        <div id="fixed-add-btn" class="fixed-action-btn" th:if="${loginUser.roleID==1}">
+            <a class="btn-floating btn-large waves-effect waves-light blue"
+               th:href="@{${adminPath}+'/role/form'}">
                 <i class="large material-icons">add</i>
             </a>
         </div>
@@ -180,16 +183,16 @@
             <div class="row">
                 <div class="col s12 m6 l6">
                     <h6>角色编号</h6>
-                    <p>id</p>
+                    <p id="detail-item-id">id</p>
                 </div>
                 <div class="col s12 m6 l6">
                     <h6>角色名</h6>
-                    <p>username</p>
+                    <p id="detail-item-name">name</p>
                 </div>
 
                 <div class="col s12 m12 l12">
                     <h6>备注</h6>
-                    <p>remark</p>
+                    <p id="detail-item-remark">remark</p>
                 </div>
             </div>
         </div>
@@ -227,6 +230,21 @@
         $("#detail-modal").modal();
         $("#roleID").material_select();
     });
+
+    function detail(id) {
+        var url = '[[${adminPath}]]' + "/role/detail/" + id;
+        $.ajax({
+            url: url,
+            type: "GET",
+            success: function (data) {
+                $("#detail-item-id").text(data.role.id);
+                $("#detail-item-name").text(data.role.name);
+                $("#detail-item-remark").text(data.role.remark);
+            },
+            error: function () {
+            }
+        });
+    }
 </script>
 </body>
 </html>
