--- a/src/main/webapp/WEB-INF/templates/role/roleForm.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -16,7 +16,6 @@
 <header>
     <nav style="background-color: #37474f;z-index: 1;">
         <div class="nav-wrapper">
-            <!--/* <editor-fold desc="responsive navigation"> */-->
             <ul class="left">
                 <li style="height: 56px;">
                     <a href="#" data-activates="nav-mobile" id="button-nav-menu" class="hide-on-large-only">
@@ -26,31 +25,28 @@
             </ul>
             <ul id="nav-mobile" class="side-nav fixed" style="transform: translateX(0%);">
                 <li class="logo">
-                    <a id="logo-container" href="#" class="brand-logo">
+                    <a id="logo-container" th:href="@{${adminPath}+'/main'}" class="brand-logo">
                         <img src="../../../static/application/image/logo.png" alt="logo" class="center-block"/>
                     </a>
                 </li>
                 <li>
-                    <a href="../system/main.html" class="waves-effect waves-teal">首页</a>
+                    <a th:href="@{${adminPath}+'/main'}" class="waves-effect waves-teal">首页</a>
                 </li>
                 <li>
-                    <a href="../advertisementMachine/advertisementMachineList.html"
-                       class="waves-effect waves-teal">广告机</a>
+                    <a th:href="@{${adminPath}+'/advertisementMachine/list/1'}" class="waves-effect waves-teal">广告机</a>
                 </li>
                 <li>
-                    <a href="../advertisement/advertisementList.html" class="waves-effect waves-teal">广告</a>
+                    <a th:href="@{${adminPath}+'/advertisement/list'}" class="waves-effect waves-teal">广告</a>
                 </li>
-                <li>
-                    <a href="../user/userList.html" class="waves-effect waves-teal">用户</a>
+                <li th:if="${loginUser.roleID==1}">
+                    <a th:href="@{${adminPath}+'/user/list'}" class="waves-effect waves-teal">用户</a>
                 </li>
-                <li class="active">
-                    <a href="#" class="waves-effect waves-teal">角色 - 需要角色判断来显示</a>
+                <li class="active" th:if="${loginUser.roleID==1}">
+                    <a th:href="@{${adminPath}+'/role/list'}" class="waves-effect waves-teal">角色</a>
                 </li>
             </ul>
-            <!--/* </editor-fold> */-->
-            <!--/* <editor-fold desc="right navbar item"> */-->
             <ul class="right">
-                <li>username，欢迎</li>
+                <li th:text="|${loginUser.username}, 欢迎|"></li>
                 <li>
                     <a class="dropdown-button" href="#" data-activates="dropdown-menu">
                         <i class="material-icons right">account_circle</i>
@@ -58,9 +54,8 @@
                 </li>
             </ul>
             <ul id="dropdown-menu" class="dropdown-content">
-                <li><a href="#" class="black-text">退出</a></li>
+                <li><a th:href="@{${adminPath}+'/logout'}" class="black-text">退出</a></li>
             </ul>
-            <!--/* </editor-fold> */-->
         </div>
     </nav>
 </header>
